--- a/src/components/effect/effectright.scss
+++ b/src/components/effect/effectright.scss
@@ -1,10 +1,19 @@
+@import 'src/scss/_mixins.scss';
+
 .smoker {
 width: 50%;
 height: 50%;
   position: fixed;
   top: 250px;
   right: -160px;
+  right: 0px;
+
   z-index: -999;
+  @media (max-width: 399px) {
+    position: fixed;
+  top: 300px;
+  right: 200px;
+  }
 }
 
 .fig-1r {
