--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -27,8 +27,8 @@ body {
 .home__audioplayer {
     position: fixed;
     z-index: 999;
-    bottom: 0%;
-  right: -10%;
+    bottom: 0px;
+  right: -405px;
   transform: translate(-50%, -50%);
 }
 
